--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.card {
+  background-color: gray;
+  width: 220px;
+  height: 200px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.img {
+  width: 50px;
 }
